# TabelCPP

./: .gitignore  MultiTable.sln  main.cpp
Helps/: FileReader.cpp  FileReader.h  TWordReader.cpp  TWordReader.h
MultiTable/: CMakeLists.txt  MultiTable.vcxproj  MultiTable.vcxproj.filters  TArrayTable.cpp  TArrayTable.h  TDatValue.h  TMarks.cpp  TMarks.h  TScanTable.cpp  TScanTable.h  TSortTable.cpp  TSortTable.h  TTabRecord.h  TTable.h  TWordCounter.cpp  TWordCounter.h  main.cpp  v&mfr.txt  v&mru.txt
Tabel/: TArrayTable.h  TDatCom.h  TScanTable.cpp  TScanTable.h  TSortTable.cpp  TSortTable.h  TTable.h
Tabel/Record/: TTabRecord.h  TWordCounter.h
